--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://luet-lab.github.io/"
+baseURL = "https://luet-lab.github.io/docs/"
 title = "Luet docs"
 
 enableRobotsTXT = true
