--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL = "https://luet-lab.github.io/docs/"
-title = "Luet docs"
+title = "Luet"
 
 enableRobotsTXT = true
 
@@ -53,7 +53,7 @@ id = "UA-00000000-0"
 
 [languages]
 [languages.en]
-title = "Luet docs"
+title = "Luet"
 description = "Package manager built from containers"
 languageName ="English"
 # Weight used for sorting.
